Add seo and favico

--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shahiem Seymor</title>
+
+    <title>shahiem seymor | creative developer</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Portfolio of Shahiem Seymor, a creative developer specializing in web development and interactive digital experiences."
+    />
+    <meta
+      name="keywords"
+      content="Shahiem Seymor, creative developer, web developer,front-end, portfolio, interactive design, digital experiences"
+    />
+    <meta name="author" content="Shahiem Seymor" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="shahiem seymor | creative developer" />
+    <meta
+      property="og:description"
+      content="Explore the work of Shahiem Seymor, a creative developer building digital experiences."
+    />
+    <meta property="og:url" content="https://shahiemseymor.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="shahiem seymor | creative developer" />
+    <meta
+      name="twitter:description"
+      content="Creative developer portfolio showcasing web development, UI/UX design, and interactive projects."
+    />
 
     <link href="/src/css/main.css" rel="stylesheet" />
   </head>
